<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DialNeelam</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcomeToDialNeelam">Welcome To Dial Neelam</string>
    <string name="quickSearch">Quick Search</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="viewAll">View All</string>
    <string name="goToHomeScreen">Go to Home screen</string>
    <string name="more">More</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="title_activity_all_pages">AllPages</string>
    <string name="enterYourName">Enter your Name</string>
    <string name="enterPhoneNumber">Enter Phone Number</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="save">Save</string>
    <string name="preference_profile_details">com.jagan.dialneelam.preference_profile</string>
    <string name="profile_name">profile_name</string>
    <string name="profile_email">profile_email</string>
    <string name="profile_phone">profile_phone</string>
    <string name="enterAddressOrLandmark">Enter Address or Landmark</string>
    <string name="list">List</string>

</resources>