<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="@dimen/layout_margin_left"
    android:layout_marginRight="@dimen/layout_margin_right"
    android:layout_marginTop="12dp"
    android:gravity="center_vertical"
    tools:context=".Home" >

    <TextView
        android:id="@+id/textView_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/welcomeToDialNeelam"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_home_view_all"
        android:background="@color/Aquamarine" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_home_view_all"
        android:background="@color/Aquamarine" />

    <Button
        android:id="@+id/button_home_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_spinner_container"
        android:layout_marginTop="@dimen/home_margin_top_bottom"
        android:layout_toLeftOf="@+id/button_home_go_home"
        android:layout_toRightOf="@+id/TextView02"
        android:background="@drawable/buttons"
        android:text="@string/search" />

    <Button
        android:id="@+id/button_home_go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:background="@drawable/buttons"
        android:text="@string/more" />

    <Button
        android:id="@+id/button_home_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_home_view_all"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button_home_go_home"
        android:background="@drawable/buttons"
        android:text="@string/exit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/button_home_go_home"
        android:layout_alignTop="@+id/button_home_go_home"
        android:background="@color/Aquamarine" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_home_exit"
        android:layout_alignTop="@+id/button_home_go_home"
        android:layout_toRightOf="@+id/button_home_exit"
        android:background="@color/Aquamarine" />

    <LinearLayout
        android:id="@+id/linearLayout_spinner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinner_home_property1"
        android:layout_marginTop="@dimen/home_margin_top_bottom" >

        <Spinner
            android:id="@+id/spinner_home_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/city" />

        <Spinner
            android:id="@+id/spinner_home_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_buy_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner_home_property1"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/buy" />

        <RadioButton
            android:id="@+id/radio_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_home_property1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_home_title"
        android:layout_marginTop="@dimen/home_margin_top_bottom"
        android:layout_toLeftOf="@+id/radioGroup_buy_sell"
        android:entries="@array/property_type" />

</RelativeLayout>